--- a/PowerPack/PowerPack/src/net/vdombox/powerpack/panel/Search.mxml
+++ b/PowerPack/PowerPack/src/net/vdombox/powerpack/panel/Search.mxml
@@ -126,7 +126,16 @@
 				
 				clearResults();
 			}
-			
+
+            override public function setFocus() : void
+            {
+                if (!searchValue_TextInput)
+                    return;
+
+                searchValue_TextInput.setFocus();
+
+                clear();
+            }
 			
 		]]>
 	</mx:Script>
