--- a/IDE/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -76,8 +76,7 @@
 
 					_scripts.sort = new Sort();
 
-					var sortField : SortField = new SortField( "name" );
-					sortField.caseInsensitive = true;
+					var sortField : SortField = new SortField( "name", true );
 
 					_scripts.sort.fields = [ sortField ];
 					_scripts.refresh();
