--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
@@ -8,9 +8,10 @@
 		<![CDATA[
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-			import mx.collections.VectorCollection;
-			
+
 			import net.vdombox.ide.common.model._vo.AttributeVO;
+
+			import org.apache.flex.collections.VectorCollection;
 
 			private var _attributeVO : AttributeVO;
 			
