--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -11,12 +11,13 @@
 		<![CDATA[
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-			import mx.collections.VectorCollection;
-			
+
 			import net.vdombox.ide.common.model._vo.AttributeVO;
 			import net.vdombox.ide.common.model._vo.ObjectListVO;
 
-			
+			import org.apache.flex.collections.VectorCollection;
+
+
 			private var _attributeVO : AttributeVO;
 			
 			[Bindable]
