updated for SDK 4.15.0

--- a/IDE/DB/src/net/vdombox/ide/modules/DataBase.mxml
+++ b/IDE/DB/src/net/vdombox/ide/modules/DataBase.mxml
@@ -16,7 +16,7 @@
 		mx1|ScrollBar
 		{
 			cornerRadius : 4;
-			fillColors  : #707070, #909090;
+			/*fillColors  : #707070, #909090;*/
 			gripColor  : #323232;
 			
 			downArrowUpSkin: ClassReference(null);
